--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Abigail J. Frost"
-  avatar           : "profile.png"
+  avatar           : "JOBPHOTO.png"
   bio              : "Astrophysicist studying massive stars and star and planet formation"
   location         : #"Belgium"
   employer         : "https://fys.kuleuven.be/ster/staff/junior-staff/abigail-frost"
