--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,8 @@ title                    : "Dr. Abigail Frost"
 title_separator          : "-"
 name                     : &name "Abigail Frost"
 description              : &description "lol"
-url                      : https://abigailfrostastro.github.io/webpage/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : "https://abigailfrost.github.io/" # the subpath of your site, e.g. "/blog"
+url                      : "https://abigailfrost.github.io/" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : #"academicpages/academicpages.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
