--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ title                    : "Dr. Abigail Frost"
 title_separator          : "-"
 name                     : &name "Abigail Frost"
 description              : &description "lol"
-url                      : https://abigailfrostastro.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://abigailfrostastro.github.io/webpage/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "abigailfrostastro.github.io/webpage/"
+repository               : "abigailfrostastro.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
