--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Abigail J. Frost"
   avatar           : "JOBPHOTO.png"
-  bio              : "Astrophysicist studying massive stars and star and planet formation"
+  bio              : "Astrophysicist studying massive stars and star formation"
   location         : #"Belgium"
   employer         : #"https://fys.kuleuven.be/ster/staff/junior-staff/abigail-frost"
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
