--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Abigail J. Frost"
+  name             : "Dr. Abigail J. Frost"
   avatar           : "JOBPHOTO.png"
   bio              : "Astrophysicist studying massive stars and star formation"
   location         : #"Belgium"
