--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   avatar           : "JOBPHOTO.png"
   bio              : "Astrophysicist studying massive stars and star formation"
   location         : #"Belgium"
-  employer         : "Please check out my wesbite! https://sites.google.com/view/abigail-frost-astro/home"
+  employer         : "[New website!](https://sites.google.com/view/abigail-frost-astro/home)"
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : #"http://yourfullgooglescholarurl.com"
   email            : 
